<resources>
    <string name="app_name">MEETR</string>
    <string name="email_hint"> Email</string>
    <string name="password_hint"> Password</string>
    <string name="button_text">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="modV_queue">Queue</string>
    <string name="modV_partlist">Participants</string>
    <string name="modV_options">Options</string>
    <string name="modV_lobbyCode">Open lobby code</string>
    <string name="modV_leaveMeeting">Leave your meeting</string>
    <string name="meeting">Meeting</string>
    <string name="the_current_queue">The current queue</string>
    <string name="join_queue">Join queue</string>
    <string name="finish_talking">Finish talking</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="participation_view">Participation View</string>
    <string name="leave_your_meeting">Leave your meeting</string>
    <string name="leave_participant_list">Leave participant list</string>
    <string name="leave_queue_list">Leave queue list</string>
    <string name="open_lobby_code">Open lobby code</string>
    <string name="modV_voting">Initiate vote</string>
    <string name="modV_Queue">Queue</string>
    <string name="join">Join</string>
    <string name="meeting_code">Meeting code</string>
    <string name="create_new_meeting">Create new meeting</string>
    <string name="current_queue">Current queue</string>
    <string name="end_meeting">End meeting</string>
    <string name="modV_censensus">Open Consensus</string>
    <string name="modV_endConsensus">End Consensus</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="title_register">Register</string>
    <string name="reply_button">Reply button</string>
    <string name="partV_join_q">Join queue</string>


</resources>