<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    android:padding="20dp">

    <!-- binding object of ViewModel to the XML layout -->
    <data>

        <variable
            name="viewModel"
            type="com.group7.meetr.viewmodel.ModeratorViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.2"
            android:paddingTop="20dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_leave_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/modV_leaveMeeting"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/arrow_left" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="24"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_meetingID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-medium"
                    android:text="MeetingID"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_lobby_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/modV_lobbyCode"
                    android:cropToPadding="false"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/qrcode" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/options_LOUT"
                style="@style/buttonList"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <Button
                    android:id="@+id/btn_endMeeting"
                    android:layout_width="0dp"
                    android:layout_height="61dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:paddingLeft="3dp"
                    android:paddingRight="8dp"
                    android:text="@string/end_meeting"
                    app:icon="@drawable/close_circle_outline" />

                <Button
                    android:id="@+id/btn_options"
                    android:layout_width="0dp"
                    android:layout_height="61dp"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="3dp"
                    android:text="@string/modV_options"
                    app:icon="@drawable/cog_outline" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/vote_LOUT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp">

                <Button
                    android:id="@+id/btn_participants"
                    android:layout_width="0dp"
                    android:layout_height="61dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/modV_partlist"
                    app:icon="@drawable/account_group_outline" />

                <Button
                    android:id="@+id/btn_queue"
                    android:layout_width="0dp"
                    android:layout_height="61dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/modV_queue"
                    app:icon="@drawable/human_queue" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/consensus_LOUT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp">

                <Button
                    android:id="@+id/btn_consensus"
                    android:layout_width="0dp"
                    android:layout_height="61dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:text="@string/modV_censensus"
                    app:icon="@drawable/account_group_outline" />

                <Button
                    android:id="@+id/btn_endConsensus"
                    android:layout_width="0dp"
                    android:layout_height="61dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/modV_endConsensus"
                    app:icon="@drawable/human_queue" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/participant_LOUT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp" />

            <LinearLayout
                android:id="@+id/join_LOUT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp">

                <Button
                    android:id="@+id/btn_join"
                    android:layout_width="0dp"
                    android:layout_height="61dp"
                    android:layout_weight="1"
                    android:text="@string/participation_view"
                    app:icon="@drawable/account_arrow_right_outline" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <TextView
                    android:id="@+id/current_speaker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Current Speaker"
                    android:textSize="35sp"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/currentspeakerList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.476"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/current_speaker"
                    app:layout_constraintVertical_bias="0.962" />
            </LinearLayout>

        </LinearLayout>

        </LinearLayout>

    <!-- Provided Linear layout for the activity components -->
</layout>