<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- binding object of ViewModel to the XML layout -->
    <data>
        <variable
            name="viewModel"
            type="com.group7.meetr.viewmodel.LoginPageViewModel" />
    </data>

    <!-- Provided Linear layout for the activity components -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="11dp"
        android:background="#168BC34A"
        android:orientation="vertical"
        android:gravity="center">

        <!-- EditText field for the Email -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="Login"
            android:textSize="35sp"
            android:textStyle="bold" />

        <!-- EditText field for the password -->
        <EditText
            android:id="@+id/inEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_border"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="20dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="8dp" />

        <EditText
            android:id="@+id/inPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_border"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="20dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="8dp" />

        <!-- Login Button of the activity -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"

            android:background="@drawable/button_border"
            android:text="@string/button_text"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_registerInstead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="Register" />


    </LinearLayout>
</layout>